--- a/PlatformerGameJam/.vscode/settings.json
+++ b/PlatformerGameJam/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "GameJam3.sln"
+    "dotnet.defaultSolution": "PlatformerGameJam.sln"
 }
